force-app/main/default/objects/Dispatch__c/fields/Closest_Transport_Branch__c.field-meta.xml
<CustomField>
    <fullName>Closest_Transport_Branch__c</fullName>
    <label>Closest Transport Branch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>