force-app/main/default/objects/Dispatch__c/fields/Converted_PIs__c.field-meta.xml
<CustomField>
    <fullName>Converted_PIs__c</fullName>
    <description>Number of Product Information&apos;s in this Dispatch which are in the &quot;Converted&quot; stage. (Used for a validation rule)</description>
    <label>Converted PIs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>