force-app/main/default/objects/Dispatch__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Distributor__c</field>
            <operation>equals</operation>
            <valueField>Dealer__c.Distributor__c</valueField>
        </filterItems>
        <infoMessage>Only dealers that match the Distributor selected will be allowed to be picked.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Dealer__c</referenceTo>
    <relationshipLabel>Dispatches</relationshipLabel>
    <relationshipName>Dispatch_Details</relationshipName>
    <type>Lookup</type>
</CustomField>