force-app/main/default/objects/Dispatch__c/fields/Dispatch_Advance__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Advance__c</fullName>
    <label>Dispatch Advance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>