force-app/main/default/objects/Dispatch__c/fields/Dispatch_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Credit_Amount__c</fullName>
    <description>Credit amount for this dispatch only.</description>
    <formula>Dispatch_Total_Amount__c -  Dispatch_Advance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispatch Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>