force-app/main/default/objects/Dispatch__c/fields/Dispatch_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Invoice_Date__c</fullName>
    <label>Dispatch Invoice Date</label>
    <type>Date</type>
</CustomField>