force-app/main/default/objects/Dispatch__c/fields/Dispatch_Month__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Month__c</fullName>
    <formula>IF( MONTH(  Dispatch_Invoice_Date__c ) = 1, &apos;January&apos;, IF( MONTH(  Dispatch_Invoice_Date__c ) = 2, &apos;February&apos;, IF( MONTH(  Dispatch_Invoice_Date__c ) = 3, &apos;March&apos;, IF( MONTH(  Dispatch_Invoice_Date__c ) = 4, &apos;April&apos;, IF( MONTH(  Dispatch_Invoice_Date__c ) = 5, &apos;May&apos;, IF( MONTH(  Dispatch_Invoice_Date__c ) = 6, &apos;June&apos;, IF( MONTH(  Dispatch_Invoice_Date__c ) = 7, &apos;July&apos;, IF( MONTH(  Dispatch_Invoice_Date__c ) = 8, &apos;August&apos;, IF( MONTH(  Dispatch_Invoice_Date__c ) = 9, &apos;September&apos;, IF( MONTH(  Dispatch_Invoice_Date__c ) = 10, &apos;October&apos;,IF( MONTH(  Dispatch_Invoice_Date__c ) = 11, &apos;November&apos;,IF( MONTH(  Dispatch_Invoice_Date__c ) = 12, &apos;December&apos;,&apos;&apos;) )))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispatch Month</label>
    <type>Text</type>
</CustomField>