force-app/main/default/objects/Dispatch__c/fields/Dispatch_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Total_Amount__c</fullName>
    <formula>( Jalasanchay_1000_Rate__c * Jalasanchay_1000_Sq_Mtr__c ) +
( Jalasanchay_300_Rate__c *  Jalasanchay_Product_Type_c__c  ) +
(  Jalasanchay_300_Super_Rate__c *  Jalasanchay_300_Super_Sq_Mtr__c ) +
( Jalasanchay_750_Rate__c * Jalasanchay_750_Sq_Mtr__c ) +
( Jalsanchay_Rate__c *  Jalasanchay_Sq_mtr__c ) +
( Perco_Plus_Rate__c * Perco_Plus__c ) +
( Samruddhi_400_Rate__c * Samruddhi_400__c ) +
( Other_Rate__c * Other__c ) +
( Jalasanchay_Super_Rate__c * Jalasanchay_Super_Sq_mtr__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispatch Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>