force-app/main/default/objects/Dispatch__c/fields/Dispatch_Total_Sq_mtr__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Total_Sq_mtr__c</fullName>
    <label>Dispatch Total Sq. mtr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>