force-app/main/default/objects/Dispatch__c/fields/Dispatch_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Warehouse__c</fullName>
    <label>Dispatch Warehouse</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Warehouses</valueSetName>
    </valueSet>
</CustomField>