force-app/main/default/objects/Dispatch__c/fields/Dispatch_Year__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Year__c</fullName>
    <formula>YEAR( Dispatch_Invoice_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispatch Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>