force-app/main/default/objects/Dispatch__c/fields/Disptach_Owner__c.field-meta.xml
<CustomField>
    <fullName>Disptach_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disptach Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Dispatches1</relationshipName>
    <type>Lookup</type>
</CustomField>