force-app/main/default/objects/Dispatch__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Distributor__c</referenceTo>
    <relationshipName>Dispatch_Details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>