force-app/main/default/objects/Dispatch__c/fields/Distributor_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Credit_Limit__c</fullName>
    <formula>IF( Distributor__r.Id &lt;&gt; &quot;a032w00000FcumH&quot; ,  Distributor__r.Credit_Limit__c ,  Dealer__r.Credit_Limit__c )</formula>
    <label>Distributor Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>