force-app/main/default/objects/Dispatch__c/fields/Exec_Approval__c.field-meta.xml
<CustomField>
    <fullName>Exec_Approval__c</fullName>
    <description>Exec approval for a dispatch is needed when the dispatch is being given on credit or there is some discounted prices.</description>
    <inlineHelpText>Automatically set using Approval Process. Not to be manually changed.</inlineHelpText>
    <label>Exec Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>