force-app/main/default/objects/Dispatch__c/fields/Freight_Charge_Bearer__c.field-meta.xml
<CustomField>
    <fullName>Freight_Charge_Bearer__c</fullName>
    <label>Freight Charge Bearer</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arranged by Buyer</fullName>
            </value>
            <value>
                <fullName>Buyer to Pay</fullName>
            </value>
            <value>
                <fullName>Paid by Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>