force-app/main/default/objects/Dispatch__c/fields/Jalasanchay_1000_Rate__c.field-meta.xml
<CustomField>
    <fullName>Jalasanchay_1000_Rate__c</fullName>
    <label>Jalasanchay 1000 Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>