force-app/main/default/objects/Dispatch__c/fields/Jalasanchay_1000_Sq_Mtr__c.field-meta.xml
<CustomField>
    <fullName>Jalasanchay_1000_Sq_Mtr__c</fullName>
    <label>Jalasanchay 1000 Sq Mtr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>