force-app/main/default/objects/Dispatch__c/fields/Jalasanchay_300_Super_Rate__c.field-meta.xml
<CustomField>
    <fullName>Jalasanchay_300_Super_Rate__c</fullName>
    <label>Jalasanchay 300 Super Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>