force-app/main/default/objects/Dispatch__c/fields/Jalasanchay_750_Sq_Mtr__c.field-meta.xml
<CustomField>
    <fullName>Jalasanchay_750_Sq_Mtr__c</fullName>
    <label>Jalasanchay 750 Sq Mtr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>