force-app/main/default/objects/Dispatch__c/fields/Jalasanchay_Product_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Jalasanchay_Product_Type_c__c</fullName>
    <label>Jalasanchay 300 Sq Mtr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>