force-app/main/default/objects/Dispatch__c/fields/Jalasanchay_Sq_mtr__c.field-meta.xml
<CustomField>
    <fullName>Jalasanchay_Sq_mtr__c</fullName>
    <label>Jalasanchay Sq mtr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>