force-app/main/default/objects/Dispatch__c/fields/Jalsanchay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Jalsanchay_Rate__c</fullName>
    <label>Jalasanchay Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>