force-app/main/default/objects/Dispatch__c/fields/Jalsanchay_Super_Amount__c.field-meta.xml
<CustomField>
    <fullName>Jalsanchay_Super_Amount__c</fullName>
    <formula>Jalasanchay_Super_Rate__c *  Jalasanchay_Super_Sq_mtr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jalsanchay Super Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>