force-app/main/default/objects/Dispatch__c/fields/Other_Rate__c.field-meta.xml
<CustomField>
    <fullName>Other_Rate__c</fullName>
    <label>Other Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>