force-app/main/default/objects/Dispatch__c/fields/Perco_Plus__c.field-meta.xml
<CustomField>
    <fullName>Perco_Plus__c</fullName>
    <label>Perco Plus Sq mtr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>