force-app/main/default/objects/Dispatch__c/fields/Perco_Plus_Rate__c.field-meta.xml
<CustomField>
    <fullName>Perco_Plus_Rate__c</fullName>
    <label>Perco Plus Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>