force-app/main/default/objects/Dispatch__c/fields/Performance_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Performance_Tracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performance Tracker</label>
    <referenceTo>Performance_Tracker__c</referenceTo>
    <relationshipLabel>Dispatches</relationshipLabel>
    <relationshipName>Dispatches</relationshipName>
    <type>Lookup</type>
</CustomField>