force-app/main/default/objects/Dispatch__c/fields/Preferred_Transport_Company__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Transport_Company__c</fullName>
    <label>Preferred Transport Company</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>