force-app/main/default/objects/Dispatch__c/fields/Previous_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Previous_Outstanding__c</fullName>
    <label>Previous Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>