force-app/main/default/objects/Dispatch__c/fields/PriceBook__c.field-meta.xml
<CustomField>
    <fullName>PriceBook__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>PriceBook</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Dispatch_Warehouse__c</field>
            <operation>equals</operation>
            <valueField>PriceBook__c.Dispatch_Warehouse__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PriceBook__c</referenceTo>
    <relationshipLabel>Dispatches</relationshipLabel>
    <relationshipName>Dispatches</relationshipName>
    <type>Lookup</type>
</CustomField>