force-app/main/default/objects/Dispatch__c/fields/Product_Info_Owner__c.field-meta.xml
<CustomField>
    <fullName>Product_Info_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Info Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Dispatches</relationshipName>
    <type>Lookup</type>
</CustomField>