force-app/main/default/objects/Dispatch__c/fields/Ready_for_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Dispatch__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Click this when the order is ready to be dispatched.</inlineHelpText>
    <label>Ready for Dispatch?</label>
    <type>Checkbox</type>
</CustomField>