force-app/main/default/objects/Dispatch__c/fields/Reason_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Approval__c</fullName>
    <label>Reason for Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subsidy</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>