force-app/main/default/objects/Dispatch__c/fields/Samruddhi_400__c.field-meta.xml
<CustomField>
    <fullName>Samruddhi_400__c</fullName>
    <label>Samruddhi 400 Sq Mtr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>