force-app/main/default/objects/Dispatch__c/fields/Samruddhi_400_Rate__c.field-meta.xml
<CustomField>
    <fullName>Samruddhi_400_Rate__c</fullName>
    <label>Samruddhi 400 Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>