force-app/main/default/objects/Dispatch__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Submit For Approval&quot;</defaultValue>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submit For Approval</fullName>
                <default>true</default>
                <label>Submit For Approval</label>
            </value>
            <value>
                <fullName>Advance Approval</fullName>
                <label>Accounts Approval</label>
            </value>
            <value>
                <fullName>Exec Approval</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
                <label>Waiting for Dispatch</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Final Pay</fullName>
                <isActive>false</isActive>
                <label>Final Pay</label>
            </value>
            <value>
                <fullName>LR/DO</fullName>
                <isActive>false</isActive>
                <label>LR/DO</label>
            </value>
            <value>
                <fullName>Warranty</fullName>
                <isActive>false</isActive>
                <label>Warranty</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>