force-app/main/default/objects/Dispatch__c/fields/Total_PIs__c.field-meta.xml
<CustomField>
    <fullName>Total_PIs__c</fullName>
    <description>Total number of Product Information&apos;s related to this Dispatch. (Used to check if all PI&apos;s are in &quot;Converted&quot; state for a validation rule)</description>
    <label>Total PIs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>