force-app/main/default/objects/Dispatch__c/fields/Week_of_the_month__c.field-meta.xml
<CustomField>
    <fullName>Week_of_the_month__c</fullName>
    <formula>IF(DAY( Dispatch_Invoice_Date__c	) / 7 &lt;= 1 , 1 , 
IF(DAY( Dispatch_Invoice_Date__c	) / 7 &lt;= 2 , 2 , 
IF(DAY( Dispatch_Invoice_Date__c	) / 7 &lt;= 3 , 3 , 
IF(DAY( Dispatch_Invoice_Date__c	) / 7 &lt;= 4 , 4 , 
IF(DAY( Dispatch_Invoice_Date__c	) / 7 &lt;= 5 , 5 , 0) ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week of the month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>