force-app/main/default/objects/Dispatch__c/validationRules/Cant_Change_PriceBook_after_Approvals.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Change_PriceBook_after_Approvals</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( PriceBook__c ) &amp;&amp;
(
  ISPICKVAL( Status__c , &apos;Exec Approval&apos;) ||
  ISPICKVAL( Status__c , &apos;Hold&apos;) ||
  ISPICKVAL( Status__c , &apos;Invoice&apos;) ||
  ISPICKVAL( Status__c , &apos;Warranty&apos;) ||
  ISPICKVAL( Status__c , &apos;Final Pay&apos;) ||
  ISPICKVAL( Status__c , &apos;Completed&apos;)
)</errorConditionFormula>
    <errorDisplayField>PriceBook__c</errorDisplayField>
    <errorMessage>PriceBook cannot be changed after approvals are requested.
Reset the Status to Submit for Approval and then change PriceBook</errorMessage>
</ValidationRule>