force-app/main/default/objects/Dispatch__c/validationRules/Converted_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Converted_Validation</fullName>
    <active>true</active>
    <description>After Invoices are made, all Product Information&apos;s in this Dispatch should be in Converted stage</description>
    <errorConditionFormula>IF( 
(OR(
ISPICKVAL( Status__c , &apos;Hold&apos;),
ISPICKVAL( Status__c , &apos;Warranty&apos;),
ISPICKVAL( Status__c , &apos;Final Pay&apos;),
ISPICKVAL( Status__c , &apos;Completed&apos;)
)),  Total_PIs__c != Converted_PIs__c ,false)</errorConditionFormula>
    <errorMessage>After Invoices are made, all Product Information&apos;s in this Dispatch should be in Converted stage</errorMessage>
</ValidationRule>