force-app/main/default/objects/Dispatch__c/validationRules/Dealer_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Dealer_validation</fullName>
    <active>true</active>
    <description>If Distributor is Avana then Dealer is required.</description>
    <errorConditionFormula>Distributor__r.Id = &apos;a032w00000FcumH&apos; &amp;&amp; ISBLANK(Dealer__c)</errorConditionFormula>
    <errorDisplayField>Dealer__c</errorDisplayField>
    <errorMessage>If Distributor is Avana then Dealer is required.</errorMessage>
</ValidationRule>