force-app/main/default/objects/Dispatch__c/validationRules/Dispatch_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Dispatch_Date</fullName>
    <active>true</active>
    <errorConditionFormula>(Ready_for_Dispatch__c = True)&amp;&amp;ISBLANK( Dispatch_Date__c)</errorConditionFormula>
    <errorDisplayField>Dispatch_Date__c</errorDisplayField>
    <errorMessage>Please fill the Dispatch Date.</errorMessage>
</ValidationRule>