force-app/main/default/objects/Dispatch__c/validationRules/Dispatch_Totals_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Dispatch_Totals_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( Dispatch_Total_Amount__c  &gt;=  Dispatch_Advance__c )</errorConditionFormula>
    <errorDisplayField>Dispatch_Advance__c</errorDisplayField>
    <errorMessage>Dispatch Advance should be less than dispatch total amount.</errorMessage>
</ValidationRule>