force-app/main/default/objects/Dispatch__c/validationRules/Distributor_Dealer_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Distributor_Dealer_Active</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
    NOT(ISBLANK(Distributor__c))
    &amp;&amp; 
    Distributor__r.Active__c
    &amp;&amp;
    ( ISBLANK(Dealer__c) || Dealer__r.Active__c )
)</errorConditionFormula>
    <errorMessage>Distributor / Dealer should be Active!</errorMessage>
</ValidationRule>