force-app/main/default/objects/Dispatch__c/validationRules/Enter_Product_Rates.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Product_Rates</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL( Status__c , &quot;Exec Approval&quot;)  || 
ISPICKVAL( Status__c , &quot;Invoice&quot;) || 
ISPICKVAL( Status__c , &quot;Hold&quot;)|| 
ISPICKVAL( Status__c , &quot;Completed&quot;)) &amp;&amp;  ((Jalasanchay_1000_Sq_Mtr__c &gt; 0 &amp;&amp;  ISBLANK( Jalasanchay_1000_Rate__c ))  || 
( Jalasanchay_Product_Type_c__c &gt; 0 &amp;&amp;  ISBLANK(  Jalasanchay_300_Rate__c ))|| 
( Jalasanchay_300_Super_Sq_Mtr__c &gt; 0 &amp;&amp;  ISBLANK(  Jalasanchay_300_Super_Rate__c ))|| 
(   Jalasanchay_750_Sq_Mtr__c &gt; 0 &amp;&amp;  ISBLANK(  Jalasanchay_750_Rate__c ))|| 
( Jalasanchay_Sq_mtr__c &gt; 0 &amp;&amp;  ISBLANK(  Jalsanchay_Rate__c ))|| 
( Jalasanchay_Super_Sq_mtr__c &gt; 0 &amp;&amp;  ISBLANK(  Jalasanchay_Super_Rate__c ))|| 
( Other__c &gt; 0 &amp;&amp;  ISBLANK(  Other_Rate__c  ))|| 
( Perco_Plus__c &gt; 0 &amp;&amp;  ISBLANK(  Perco_Plus_Rate__c  ))|| 
( Samruddhi_400__c &gt; 0 &amp;&amp;  ISBLANK(  Samruddhi_400_Rate__c ))|| 
( Jalasanchay_300_Super_Sq_Mtr__c &gt; 0 &amp;&amp;  ISBLANK(  Jalasanchay_300_Super_Rate__c )))</errorConditionFormula>
    <errorMessage>Please enter product rates</errorMessage>
</ValidationRule>