force-app/main/default/objects/Dispatch__c/validationRules/Exec_approval_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Exec_approval_validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
ISPICKVAL( Status__c , &apos;Invoice&apos;),
ISPICKVAL( Status__c , &apos;Hold&apos;),
ISPICKVAL( Status__c , &apos;Warranty&apos;),
ISPICKVAL( Status__c , &apos;Final Pay&apos;),
ISPICKVAL( Status__c , &apos;Completed&apos;)
)&amp;&amp; NOT(ISPICKVAL( Exec_Approval__c , &apos;Approved&apos;))</errorConditionFormula>
    <errorDisplayField>Exec_Approval__c</errorDisplayField>
    <errorMessage>The dispatch need Exec approval.</errorMessage>
</ValidationRule>