force-app/main/default/objects/Dispatch__c/validationRules/Previous_Outstanding_Dispatch_Advance.validationRule-meta.xml
<ValidationRule>
    <fullName>Previous_Outstanding_Dispatch_Advance</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
OR(
ISPICKVAL( Status__c , &apos;Exec Approval&apos;),
ISPICKVAL( Status__c , &apos;Hold&apos;),
ISPICKVAL( Status__c , &apos;Invoice&apos;),
ISPICKVAL( Status__c , &apos;Warranty&apos;),
ISPICKVAL( Status__c , &apos;Final Pay&apos;),
ISPICKVAL( Status__c , &apos;Completed&apos;)
)
,
OR(
ISNULL( Previous_Outstanding__c ),
ISNULL( Dispatch_Advance__c)
) ,
false)</errorConditionFormula>
    <errorMessage>Please fill out the Previous Outstanding and Dispatch Advance for this Dispatch.</errorMessage>
</ValidationRule>