force-app/main/default/objects/Dispatch__c/validationRules/Sq_m_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Sq_m_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;Advance Approval&apos;) &amp;&amp;  (Dispatch_Total_Sq_mtr__c = 0 || ISBLANK(Dispatch_Total_Sq_mtr__c))</errorConditionFormula>
    <errorMessage>Please add Products to this dispatch!</errorMessage>
</ValidationRule>