force-app/main/default/objects/Dispatch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Distributor__c</columns>
    <columns>Dealer__c</columns>
    <columns>Status__c</columns>
    <columns>Dispatch_Warehouse__c</columns>
    <columns>Dispatch_Total_Sq_mtr__c</columns>
    <columns>Dispatch_Credit_Amount__c</columns>
    <columns>Converted_PIs__c</columns>
    <columns>Total_PIs__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Dispatch_Invoice_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>