force-app/main/default/objects/Dispatch__c/listViews/All_Dispatches.listView-meta.xml
<ListView>
    <fullName>All_Dispatches</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Dispatches</label>
</ListView>