force-app/main/default/objects/Dispatch__c/listViews/All_except_Completed.listView-meta.xml
<ListView>
    <fullName>All_except_Completed</fullName>
    <columns>NAME</columns>
    <columns>Distributor__c</columns>
    <columns>Dealer__c</columns>
    <columns>Status__c</columns>
    <columns>Dispatch_Warehouse__c</columns>
    <columns>Dispatch_Total_Sq_mtr__c</columns>
    <columns>Dispatch_Credit_Amount__c</columns>
    <columns>Converted_PIs__c</columns>
    <columns>Total_PIs__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>All except Completed</label>
</ListView>